--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,11 @@ body {
     label {
       color:#cfcfcf !important;
     }
+
+    th {
+        /* border-bottom: 1px solid black; */
+        background-color: #2c2c2c;
+    }
     .audio {
         background: #000000 !important;
         -webkit-transition: all 1000ms ease;
@@ -102,6 +107,9 @@ body {
     #chart {
         width: '100px';
         height: '100px';
+    }
+    #nav_item {
+        color: red !important;
     }
     .ui.menu {
         font-size: 10px !important;
@@ -317,6 +325,17 @@ body {
     }
     label {
       color:#000000 !important;
+    }
+    th {
+        background-color: #fff;
+    }
+    td {
+        background: #fff;
+        color: #2c2c2c !important;
+    }
+    td .nav_item {
+        font-weight: normal;
+        color: #2c2c2c !important;
     }
     .active {
         border-radius: 2px;
@@ -639,9 +658,9 @@ table {
 }
 
 th {
+    z-index: 1000;
     text-align: left;
     padding: 8px;
-    background-color: #222;
     position: sticky;
     top: 0;
 }
@@ -650,10 +669,6 @@ td {
     text-align: left;
     padding: 2px;
     /* border: 1px solid #ddd; */
-}
-
-tr:nth-child(even) {
-    /* background-color: #f2f2f2; */
 }
 
 .ui.table thead tr:first-child > th {
@@ -888,20 +903,32 @@ button .button .link {
     z-index: 0;
 }
 #grid_view {
-    margin-bottom: 150px;
     margin-right: 0px;
     padding-left: 20px;
     padding-top: 25px;
     padding-bottom: 40px;
     overflow-x: hidden;
     overflow-y: scroll;
+    height: 100%;
 }
 #list_view {
-    padding: 5px;
+    padding-top: 2px;
     overflow-x: hidden;
     overflow-y: scroll;
     height: 100%;
 }
+#tabs {
+    margin-top: -15px;
+    padding: 2px;
+}
+#info_view {
+    margin-top: 25px;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding-bottom: 40px;
+}
+
 #main_view:hover {
   border:none !important;
 }
@@ -911,11 +938,6 @@ button .button .link {
 #main_view .ui-selecting {
     right:2px;
     background: #252525;
-}
-#info_view {
-    border: 0px;
-    margin-right: 110px !important;
-    overflow: hidden;
 }
 #folders_card {
     background-color: transparent !important;
