--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1136,6 +1136,18 @@ input:focus {
 
 }
 
+@media only screen and (max-width: 768px) {
+    .ui.grid .three.wide.column {
+        width: 25% !important;
+    }
+}
+
+@media only screen and (max-width: 1279px) {
+    .ui.grid .three.wide.column {
+        width: 25% !important;
+    }
+}
+
 @media only screen and (min-width: 1280px) {
 
   body {
@@ -1170,19 +1182,23 @@ input:focus {
 
 @media only screen and (max-width: 1024px) {
 
-  body {
-      font-size: 1em;
-  }
+    body {
+        font-size: 1em;
+    }
 
-  .form-control-sm, .btn-link {
-      font-size: 1em;
-  }
+    .form-control-sm, .btn-link {
+        font-size: 1em;
+    }
 
-  .sb-container {
-      width: 100%;
-  }
+    .sb-container {
+        width: 100%;
+    }
+    .ui.grid .three.wide.column {
+        width: 50% !important;
+    }
 
 }
+
 #statusbar {
     background-color: rgb(0, 122, 204, .75);
     color: rgb(255, 255, 255);
