--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,10 +220,13 @@ body {
         padding: 25px;
     }
     #delete_files {
+        /* border:1px solid black; */
         padding: 10px;
+        padding-bottom: 60px;
         /* background:#252525; */
         width: 100%;
-        height: 150px;
+        height: 100%;
+        /* min-height: 150px; */
         overflow: auto;
     }
     .icon {
@@ -561,8 +564,8 @@ body {
     background-color: #252525;
     position: fixed;
     bottom: 0;
-    width: 300px;
-    height: 50px;
+    width: 350px;
+    min-height: 80px;
     z-index: 1000;
 }
 
@@ -572,7 +575,7 @@ progress { color: blue; }
 
 
 #progress {
-    width: 200px;
+    width: 260px;
 }
 
 
