--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,17 +217,27 @@ body {
         cursor: pointer;
     }
     #confirm_delete {
-        padding: 25px;
+        margin-top: 15px;
+        /* padding-top: 30px; */
+        padding: 40px;
     }
     #delete_files {
-        /* border:1px solid black; */
+        border: 1px solid #3e3e3e;
+        border-style: inset;
+        margin-top: 15px;
         padding: 10px;
-        padding-bottom: 60px;
-        /* background:#252525; */
+        padding-bottom: 70px;
         width: 100%;
         height: 100%;
-        /* min-height: 150px; */
         overflow: auto;
+    }
+    #confirm_delete .header {
+        height: 20px;
+        padding-top: 15px;
+    }
+    #confirm_delete .footer {
+        padding-top: 15px;
+        padding-bottom: 10px !important;
     }
     .icon {
         /* filter: drop-shadow(5px 5px 2px #cfcfcf); */
@@ -550,10 +560,6 @@ body {
 }
 
 #feedback { font-size: 1.4em; }
-
-
-#list_view .grid {
-}
 
 #progress_div{
     padding-top: 10px;;
@@ -890,10 +896,33 @@ button .button .link {
     width: 250px !important;
     z-index: 2
 }
-#main_view {
+.ui.tiny.tabular.menu .item {
+    background: #252525 !important;
+    color: #FCB403 !important;
+    border: 1px solid #3e3e3e;
+    border-top: 1px solid #069;
+    font-size: 10px;
+    height: 23px;
+    line-height: 10px;
+    border-radius: 0 !important;
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    /* width: 150px; */
+}
+.ui.tiny.tabular.menu {
     position: relative;
-    outline: none;
-    border: none;
+    margin-left: -5px;
+    background: transparent !important;
+    border-bottom: 1px solid #3e3e3e;
+    min-height: 18px !important;
+}
+#main_view {
+    /* position: relative; */
+    /* outline: none; */
+    /* border: none; */
+    margin-top: 10px;
     /* margin-bottom: 150px; */
     /* margin-right: 0px; */
     height: 100%;
@@ -903,28 +932,41 @@ button .button .link {
     /* padding-left: 20px; */
     /* padding-top: 25px; */
     /* padding-bottom: 40px; */
-    z-index: 0;
-    width: 100%;
+    /* z-index: 0; */
+    /* width: 100%; */
+    /* background: red; */
+    /* box-sizing: border-box; */
+
 }
 #grid_view {
+    position:relative;
+    margin-left: 15px;
     margin-right: 0px;
-    padding-left: 20px;
-    padding-top: 25px;
+    margin-top: 0px;
+    /* padding-left: 20px; */
+    padding-top: 15px;
     padding-bottom: 40px;
-    padding-right: 0px;
+    padding-right: 25px;
     overflow-x: hidden;
     overflow-y: scroll;
     height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    /* border: 1px solid #3e3e3e; */
 }
+
 #list_view {
-    padding: 10px;
-    padding-top: 2px;
+    /* padding: 10px; */
+    padding-top: 0px;
     overflow-x: hidden;
     overflow-y: scroll;
     height: 100%;
-}
-#list_view {
+    width:100%;
+    box-sizing: border-box;
     font-weight: normal !important;
+}
+#list_view table {
+    width: 100%;
 }
 #list_view tbody tr:hover {
     outline: 1px solid #069 !important;
@@ -932,6 +974,14 @@ button .button .link {
 }
 #list_view td {
     padding: 0px !important;
+}
+#list_view th {
+    /* padding-left: 5px !important; */
+    /* background: #222; */
+    border: 1px solid black;
+}
+#list_view tbody td {
+    padding-left: 15px !important;
 }
 #list_view .header_link {
     font-weight: normal !important;
@@ -942,11 +992,15 @@ button .button .link {
     padding: 2px;
 }
 #info_view {
+    position:relative;
     margin-top: 25px;
     height: 100%;
     overflow-x: hidden;
     overflow-y: scroll;
     padding-bottom: 40px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 #main_view:hover {
@@ -1170,19 +1224,38 @@ input:focus {
 
 } */
 
-@media only screen and (min-width: 400px) {
+/* @media only screen and (min-width: 400px) {
     .ui.grid .three.wide.column {
         width: 50% !important;
     }
+} */
+
+
+@media only screen and (max-width: 1152px) {
+    .ui.grid .three.wide.column {
+        width: 25% !important;
+    }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 1024px) {
     .ui.grid .three.wide.column {
         width: 33% !important;
     }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 768px) {
+    .ui.grid .three.wide.column {
+        width: 50% !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .ui.grid .three.wide.column {
+        width: 100% !important;
+    }
+}
+
+/* @media only screen and (min-width: 1024px) {
 
     body {
         font-size: 1em;
@@ -1199,7 +1272,7 @@ input:focus {
         width: 25% !important;
     }
 
-}
+} */
 
 /* @media only screen and (max-width: 1279px) {
     .ui.grid .three.wide.column {
@@ -1223,7 +1296,7 @@ input:focus {
 
 } */
 
-@media only screen and (min-width: 1280px) {
+/* @media only screen and (min-width: 1280px) {
 
     body {
         font-size: 1em;
@@ -1241,7 +1314,7 @@ input:focus {
         width: 20% !important;
     }
 
-  }
+} */
 
 #statusbar {
     background-color: rgb(0, 122, 204, .75);
