--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1427,3 +1427,17 @@ li {
     --error: rgb(223, 0, 0);
 
 }
+
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+}
+
+.fade-in {
+    opacity: 0;
+    animation: fade-in 1s;
+  }
