--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
         width: 400px;
         height: 150px;
         color: #fff;
-        z-index: 1000;
+        z-index: 1000 !important;
         border-radius: 15px;
     }
     #breadcrumbs::selection {
@@ -957,7 +957,7 @@ button .button .link {
 
 #list_view {
     /* padding: 10px; */
-    position: relative;
+    /* position: relative; */
     padding-top: 0px;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -967,6 +967,7 @@ button .button .link {
     font-weight: normal !important;
 }
 #list_view table {
+    z-index: 1;
     width: 100%;
 }
 #list_view tbody tr:hover {
@@ -979,6 +980,7 @@ button .button .link {
 #list_view th {
     /* padding-left: 5px !important; */
     /* background: #222; */
+    z-index: 1;
     border: 1px solid black;
 }
 #list_view tbody td {
