--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,83 +6,118 @@ html, body {
     height: 100%;
 }
 
-#header_menu {
-    display: flex;
-    background: #252525;
-    padding: 5px;
-    width: 100%;
-}
-#header_menu a {
-    color: #ffffff;
-    cursor: pointer;
-    text-decoration: none;
-}
-#navigation_menu {
-    display: flex;
-    background: #252525;
-    padding: 5px;
-    width: 100%;
-}
-#navigation_menu input[type=text] {
-    border-radius: 5px;
-    border: none;
-    color: #cfcfcf;
-    background: #424242;
-    font-size: 12px;
-    height: 18px;
-    width: 350px;
-}
-#navigation_menu input[type=text]:focus {
-    outline: 0;
-}
-#navigation_menu .item {
-    padding: 5px;
-}
-#navigation_menu .item a {
-    padding: 5px;
-    color: #cfcfcf;
+@media (prefers-color-scheme: dark) {
+
+    #header_menu {
+        display: flex;
+        background: #252525;
+        padding: 5px;
+        width: 100%;
+    }
+    #header_menu a {
+        color: #ffffff;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    #navigation_menu {
+        display: flex;
+        background: #252525;
+        padding: 5px;
+        width: 100%;
+    }
+    #navigation_menu input[type=text] {
+        border-radius: 5px;
+        border: none;
+        color: #cfcfcf;
+        background: #424242;
+        font-size: 12px;
+        height: 18px;
+        width: 350px;
+    }
+    #navigation_menu input[type=text]:focus {
+        outline: 0;
+    }
+    #navigation_menu .item {
+        padding: 5px;
+    }
+    #navigation_menu .item a {
+        padding: 5px;
+        color: #cfcfcf;
+    }
+
+    .container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+    #minibar {
+        display: flex;
+        background: #222222;
+        padding: 5px;
+        width: 250px;
+        height: 100%
+    }
+    #side_bar {
+        background: #252525;
+        padding: 5px;
+        width: 325px;
+        height: 100%
+    }
+
+    #main {
+        overflow: auto;
+        background: #2f2f2f;
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+    }
+
+    #msg {
+        color: #cfcfcf;
+        background-color: #222222;
+        border-radius: 5px;
+        padding: 5px;
+    }
+
+    #progress {
+        color: #cfcfcf;
+        background-color: #222222;
+        border-radius: 5px;
+        padding: 5px;
+        width: 250px;
+    }
+
+    #progress_msg {
+        color: #cfcfcf;
+    }
+
 }
 
-.container {
-    display: flex;
+progress {
+    height: 20px;
     width: 100%;
-    height: 100%;
-}
-#minibar {
-    display: flex;
-    background: #222222;
-    padding: 5px;
-    width: 250px;
-    height: 100%
-}
-#side_bar {
-    background: #252525;
-    padding: 5px;
-    width: 250px;
-    height: 100%
 }
 
-#main {
-    overflow: auto;
-    background: #2f2f2f;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
+progress::-webkit-progress-value {
+    background-color: #007acc;
+}
+progress::-webkit-progress-bar {
+    background-color: #e6e6e6;
 }
 
-#main .folder_grid {
+.folder_grid {
     /* border: 1px solid green; */
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
+    /* display: grid; */
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-template-rows: auto; */
     padding: 5px;
     width: 100%;
 }
-#main .file_grid {
+.file_grid {
     /* border: 1px solid red; */
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
+    /* display: grid; */
+    /* grid-template-columns: repeat(5, 1fr); */
+    /* grid-template-rows: auto; */
     padding: 5px;
     width: 100%;
 }
@@ -112,10 +147,94 @@ html, body {
     background: #334c74;
 }
 .card a {
+    display: block;
     word-break: break-all;
     color: white;
+}
+.card a:hover {
+    cursor: pointer;
+}
+.card .icon:hover {
+    cursor: pointer;
 }
 .card .content .date {
     word-break: none;
 }
+
+.highlight {
+    background: #334c74;
+}
+.highlight_select {
+    background: #334c74;
+}
+.hidden {
+    display: none;
+}
+
+.grid5 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto;
+}
+
+.grid6 {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
+}
+
+.bottom {
+    position: fixed;
+    bottom: 5px;
+    margin-bottom: 5px;
+}
+
+/* for some reason this configuration works */
+.bottom .left {
+    left: -50%;
+    right: auto;
+}
+.right  {
+    left: auto;
+    right: 25px;
+}
+
+.warning {
+    font-weight: bold;
+}
+
+.error {
+    color: var(--warning);
+}
+
+.button {
+    width: 120px;
+    border: none;
+    padding: 5px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button.warning {
+    background: var(--warning);
+}
+
+:root {
+    --black: #000000;
+    --white: #FFFFFF;
+    --grey: #808080;
+    --default: #C0C0C0;
+    --warning: #FF0000;
+    --green: #008000;
+    --blue: #0000FF;
+    --yellow: #FFFF00;
+    --orange: #FFA500;
+
+}
+
 
