--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -76,15 +76,15 @@ html, body {
         color: #cfcfcf;
         background-color: #222222;
         border-radius: 5px;
-        padding: 5px;
+        padding: 10px;
     }
 
     #progress {
         color: #cfcfcf;
-        background-color: #222222;
+        /* background-color: #222222; */
         border-radius: 5px;
         padding: 5px;
-        width: 250px;
+        width: 350px;
     }
 
     #progress_msg {
