--- a/assets/css/confirmdelete.css
+++ b/assets/css/confirmdelete.css
@@ -1,4 +1,5 @@
 html, body {
+    background: #2f2f2f;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
@@ -16,6 +17,7 @@ html, body {
 #delete_files {
     border-style: inset;
     border: 1px solid #3e3e3e;
+    background: #252525;
     padding: 5px;
     margin-top: 15px;
     width: 100%;
