--- a/assets/css/confirmdelete.css
+++ b/assets/css/confirmdelete.css
@@ -1,5 +1,5 @@
 html, body {
-    background: #2f2f2f;
+    background: var(--lessdark);
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
@@ -17,7 +17,8 @@ html, body {
 #delete_files {
     border-style: inset;
     border: 1px solid #3e3e3e;
-    background: #252525;
+    border-radius: 5px;
+    background: var(--moredark);
     padding: 5px;
     margin-top: 15px;
     width: 100%;
