--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -164,7 +164,161 @@ html, body {
 
 }
 
+@media (prefers-color-scheme: light) {
 
+    html, body {
+        background: var(--default);
+        color: var(--dark);
+    }
+
+    #header_menu {
+        display: flex;
+        background: var(--light);
+        padding: 5px;
+        width: 100%;
+    }
+
+    #header_menu .item {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    #header_menu .settings {
+        position: relative;
+        height: 12px;
+    }
+
+    #header_menu a {
+        color: var(--dark);
+        cursor: pointer;
+        text-decoration: none;
+        outline: none;
+    }
+
+    #navigation_menu {
+        display: flex;
+        background: var(--light);
+        padding: 5px;
+        width: 100%;
+        /* height: 16px; */
+    }
+
+    #navigation_menu input[type=text] {
+        border-radius: 5px;
+        border: none;
+        color: #cfcfcf;
+        background: var(--lessdark);
+        font-size: 12px;
+        height: 18px;
+        width: 98%;
+    }
+
+    #navigation_menu .item {
+        padding: 5px;
+    }
+
+    #navigation_menu .item a {
+        padding: 5px;
+        color: #cfcfcf;
+    }
+
+    .container {
+        position: relative;
+        display: flex;
+        width: 100%;
+        height: 92%;
+    }
+
+    #main {
+        position: absolute;
+        overflow: auto;
+        overflow-x: hidden;
+        /* border: 1px solid red; */
+        background: #2f2f2f;
+        border-radius: 5px;
+        padding: 10px;
+        width: 100%;
+        /* height: 100%; */
+    }
+
+    #msg {
+        color: #cfcfcf;
+        background-color: var(--dark);
+        border-radius: 5px;
+        padding: 10px;
+        z-index: 100;
+    }
+
+    #progress {
+        color: #cfcfcf;
+        background-color: rgb(0 0 0 / 0.8);
+        border-radius: 5px;
+        padding: 5px;
+        width: 350px;
+        z-index: 100;
+    }
+
+    #progress_bar {
+        height: 12px;
+    }
+
+    #progress_msg {
+        color: #cfcfcf;
+    }
+
+    #quicksearch {
+        border-radius: 5px;
+        border: 1px solid var(--moredark);
+        background: var(--dark);
+        padding: 5px;
+        height: 14px;
+        width: 350px;
+        z-index: 100;
+        outline: none;
+    }
+
+    #txt_quicksearch {
+        border-radius: 5px;
+        width: 100%;
+        font-size: 12px;
+    }
+
+    /* Dialogs */
+    .connect {
+        background: var(--dark);
+        color: var(--default);
+        padding: 25px;
+    }
+
+    .connect > .label {
+        display:block;
+        margin-bottom: 2px;
+    }
+
+    .connect > .input {
+        border: none;
+        height: 23px;
+        background: var(--lessdark);
+        color: var(--white);
+        display: block;
+        margin-bottom: 15px;
+        width: 350px;
+    }
+
+    .connect > .msg {
+        color: #ff0000;
+        padding: 5px;
+    }
+
+    #confirm {
+        padding: 40px;
+    }
+
+    #confirm .header {
+        font-weight: bold;
+    }
+
+}
 
 progress {
     height: 20px;
@@ -507,6 +661,8 @@ input[type=text]:focus {
     --lightblue: #506585;
     --yellow: #FFFF00;
     --orange: #FFA500;
+
+    --light: #cfcfcf;
 
 }
 
