--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -167,15 +167,16 @@ html, body {
 @media (prefers-color-scheme: light) {
 
     html, body {
-        background: var(--default);
-        color: var(--dark);
+        background: var(--dark);
+        color: var(--default);
     }
 
     #header_menu {
         display: flex;
-        background: var(--light);
+        background: #252525;
         padding: 5px;
         width: 100%;
+        /* height: 16px; */
     }
 
     #header_menu .item {
@@ -189,7 +190,7 @@ html, body {
     }
 
     #header_menu a {
-        color: var(--dark);
+        color: #ffffff;
         cursor: pointer;
         text-decoration: none;
         outline: none;
@@ -197,7 +198,7 @@ html, body {
 
     #navigation_menu {
         display: flex;
-        background: var(--light);
+        background: #252525;
         padding: 5px;
         width: 100%;
         /* height: 16px; */
@@ -661,8 +662,6 @@ input[type=text]:focus {
     --lightblue: #506585;
     --yellow: #FFFF00;
     --orange: #FFA500;
-
-    --light: #cfcfcf;
 
 }
 
