--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -81,6 +81,89 @@
 
 }
 
+
+@media (prefers-color-scheme: light) {
+
+    .sidebar {
+        background-color: var(--dark);
+        color: var(--light);
+        padding: 15px;
+        height: 100%;
+        overflow: auto;
+        width: 250px;
+    }
+
+    .draghandle {
+        overflow: hidden;
+        z-index: 100;
+        width: 4px;
+        height:100%;
+        right: 0;
+        bottom: 0;
+        cursor: col-resize;
+        float: right;
+    }
+
+    .draghandle:hover {
+        background-color: #3794ff !important;
+    }
+
+    #minibar {
+        margin-left: -4px;
+        padding: 8px;
+        width: 24px;
+        float:left;
+        background-color: var(--moredark);
+        border-right: 1px solid var(--lessdark);
+        height:110%
+    }
+
+    #minibar .bi {
+        padding: 5px;
+    }
+
+    #minibar .item  {
+        cursor: pointer;
+        padding-bottom: 5px;
+    }
+
+    /* #sidebar { */
+        /* background: #252525;
+        padding: 15px;
+        width: 325px;
+        height: 100% */
+    /* } */
+
+    #sidebar .header {
+        color: var(--lightblue);
+        font-weight: bold;
+        font-size: 12px;
+    }
+
+    #sidebar .item {
+        white-space: nowrap;
+        color: var(--white);
+        padding: 5px;
+        cursor: pointer;
+    }
+
+    #sidebar .item:hover {
+        background: var(--lessdark);
+        border-radius: 5px;;
+        text-decoration: underline;
+    }
+
+    #sidebar a {
+        color: var(--white);
+        text-decoration: none;
+    }
+
+    #sidebar a:hover {
+        text-decoration: underline;
+    }
+
+}
+
     /* #sidebar .title {
         color: #cfcfcf !important;
     }
